--- a/Movies-ETL.ipynb
+++ b/Movies-ETL.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22887f12",
+   "id": "0a91e951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "909d7d94",
+   "id": "2ec9327b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a3f75d98",
+   "id": "59c1a6dd",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "9296da40",
+   "id": "1e02432e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8d8a3364",
+   "id": "1aacd76b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e3f38de",
+   "id": "0548889a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d4b826c8",
+   "id": "0386a008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "55a625ff",
+   "id": "020a8506",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "71896265",
+   "id": "0a680900",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3e0ec490",
+   "id": "28d60136",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d4840a0a",
+   "id": "005cec77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8b993dc3",
+   "id": "d2a027c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0aa77896",
+   "id": "0aba6621",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c8de7613",
+   "id": "91863d96",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "959474c8",
+   "id": "4c64fde9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2361296f",
+   "id": "c71fe05d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "427d3d68",
+   "id": "ab39fab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1617bc81",
+   "id": "771de6b7",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9be8f315",
+   "id": "71fcc42a",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6bd2edc4",
+   "id": "6dd13c3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d7c34b2d",
+   "id": "158fdbd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4cac8ac8",
+   "id": "a691cbf6",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "41767d4c",
+   "id": "fc2038e8",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b03bc5ff",
+   "id": "e28dcef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3ad6a6f4",
+   "id": "d2783a79",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d1393ffc",
+   "id": "059480a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "98fd3ac6",
+   "id": "3a77b4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "45f3f947",
+   "id": "cc22ed69",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "42eb5d29",
+   "id": "42426c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1c8e2e5c",
+   "id": "794dd3ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1b91f1f5",
+   "id": "9617b656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "dab76c52",
+   "id": "9552263a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5ae9d228",
+   "id": "e6a57f1f",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d9da95e4",
+   "id": "d301de82",
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bb93fc7b",
+   "id": "9ced847c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a1a162a7",
+   "id": "4b7427ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1a946d16",
+   "id": "0ab3be56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ac8d66a5",
+   "id": "725c55a7",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "648ccb4d",
+   "id": "95ac9fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "282aebe8",
+   "id": "a4692550",
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1742285e",
+   "id": "ba449e03",
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e2b471e3",
+   "id": "e17d7287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "80acc831",
+   "id": "03f1de22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dcd6de6c",
+   "id": "5db752df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e1f04adb",
+   "id": "ad87ff92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8da0e35b",
+   "id": "c0c96bcf",
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "551ae909",
+   "id": "8baabecd",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d60c96a2",
+   "id": "0b55f37f",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4f5b3ff5",
+   "id": "e995995d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1805,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e2358325",
+   "id": "94790493",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7f8eb803",
+   "id": "78029f43",
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "bbd9395e",
+   "id": "7627d76b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "555083d9",
+   "id": "e50668fa",
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e4f7132a",
+   "id": "5fb44a19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d039629c",
+   "id": "7672ef54",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "50d735cc",
+   "id": "63a9c361",
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f098fd8e",
+   "id": "9758ae5a",
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2172,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "826516d7",
+   "id": "30e06c28",
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "3c4632c8",
+   "id": "a7a40ad9",
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a87799b9",
+   "id": "1005d985",
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "7e3e732c",
+   "id": "ad9a4f46",
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2304,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "03e50eff",
+   "id": "43884d04",
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2421,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "8c1622d8",
+   "id": "25159e6d",
    "metadata": {},
    "outputs": [
     {
@@ -2886,7 +2886,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "56ba2f68",
+   "id": "a81b3210",
    "metadata": {},
    "outputs": [
     {
@@ -2918,7 +2918,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "857ae20e",
+   "id": "cd0ff427",
    "metadata": {},
    "outputs": [
     {
@@ -3050,7 +3050,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a340d474",
+   "id": "526087b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3060,7 +3060,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "ce0309ea",
+   "id": "f6bd6409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3074,7 +3074,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "62b4bba2",
+   "id": "6676fb38",
    "metadata": {},
    "outputs": [
     {
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "e5f065ff",
+   "id": "0390f16d",
    "metadata": {},
    "outputs": [
     {
@@ -3589,7 +3589,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "63523343",
+   "id": "8adccc8a",
    "metadata": {},
    "outputs": [
     {
@@ -3611,7 +3611,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "83a7e8c6",
+   "id": "b14f3051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3626,7 +3626,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "6a8368cd",
+   "id": "4e206eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3650,8 +3650,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "id": "33f30952",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "522d5cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "24662c75",
+   "id": "6fe62a2c",
    "metadata": {},
    "outputs": [],
    "source": []
